# tiki-lakehouse-pipeline

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .sqlfluff  Makefile  README.md  docker-compose.yaml  init.sql  main.py  pyproject.toml  run_airflow.sh  run_project.sh  tiki_analytics_data_model_design.md
airflow_home/: airflow.cfg  dags  standalone_admin_password.txt
crawler/: __init__.py  fetch_tiki.py
dags/: test_airflow.py  tiki_lakehouse_pipeline.py
dbt_tiki/: .user.yml  dbt_project.yml  generate_trino_ddl.py  profiles.yml  tiki.duckdb.wal
dbt_tiki/macros/: get_external_location.sql
dbt_tiki/models/marts/: __schema.yml  dim_author.sql  dim_authors.sql  dim_brand.sql  dim_brands.sql  dim_categories.sql  dim_category.sql  dim_date.sql  dim_dates.sql  dim_product.sql  dim_products.sql  dim_seller.sql  dim_sellers.sql  fct_books.sql  fct_brand_daily.sql  fct_brands_daily.sql  fct_categories_daily.sql  fct_category_daily.sql  fct_product_snapshot.sql  fct_product_snapshots.sql  fct_seller_daily.sql  fct_sellers_daily.sql  fct_tiki_book.sql
dbt_tiki/models/marts/analytics/: __schema.yml  gold_category_performance.sql  gold_seller_insights.sql
dbt_tiki/models/marts/core/: __schema.yml  dim_categories.sql  dim_dates.sql  dim_products.sql  dim_sellers.sql  fct_product_snapshots.sql
dbt_tiki/models/staging/: __schema.yml  src_tiki.yml  stg_authors.sql  stg_books.sql  stg_brands.sql  stg_categories.sql  stg_sellers.sql  stg_tiki__products.sql  stg_tiki_books.sql  stg_tiki_products.sql
postgres/: init.sql
src/: __init__.py  airflow_dbt.py  airflow_tasks.py  analytics_plot.py  clean_history.py  clean_lakehouse.py  export_to_csv.py  generate_fake_history.py  setup_raw_table.py
trino/etc/: config.properties  jvm.config  node.properties
trino/etc/catalog/: hive.properties  iceberg.properties
