[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiki-lakehouse"
version = "0.1.0"
description = "A lakehouse project with crawler and dbt"
requires-python = ">=3.9"
dependencies = [
    # Crawler dependencies
    "requests==2.31.0",
    "pandas==2.2.1",
    "boto3==1.34.69",
    "python-dotenv==1.0.1",
    "pyarrow==15.0.2",
    # dbt dependencies
    "dbt-duckdb",
    "sqlfluff"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pre-commit"
]

[tool.black]
line-length = 100