[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiki-lakehouse"
version = "0.1.0"
description = "A lakehouse project with crawler and dbt"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Crawler dependencies
    "curl_cffi>=0.7.0",
    "requests==2.31.0",
    "pandas==2.2.1",
    "boto3==1.34.69",
    "python-dotenv==1.0.1",
    "pyarrow==15.0.2",
    # dbt dependencies
    "dbt-duckdb",
    "sqlfluff",
    "apache-airflow==2.11.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pre-commit"
]

[tool.black]
line-length = 100

[tool.setuptools]
# This repository is a flat-layout workspace that contains multiple top-level
# folders (crawler/, trino/, dbt_tiki/, logs/) that are not meant to be
# auto-discovered as installable Python packages.
#
# Declare only the root module to avoid setuptools raising:
# "Multiple top-level packages discovered in a flat-layout".
py-modules = ["main"]
packages = []
