[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiki-lakehouse"
version = "0.1.0"
description = "A lakehouse project with crawler and dbt"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Crawler dependencies
    "boto3==1.34.69",
    "curl-cffi==0.15.0",
    "pandas==2.2.1",
    "pyarrow==15.0.2",
    "python-dotenv==1.0.1",
    "requests==2.32.4",
    # dbt dependencies
    "apache-airflow==2.11.1",
    "astronomer-cosmos==1.14.1",
    "dbt-core==1.11.8",
    "dbt-duckdb==1.10.1",
    "duckdb==1.5.2",
    "sqlfluff==4.1.0",
    # OpenLineage versions are pinned to the currently resolved set.
    "openlineage-integration-common==1.46.0",
    "openlineage-python==1.46.0",
    "openlineage-sql==1.46.0",
    # Analytics/plotting
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pre-commit"
]

[tool.black]
line-length = 100

[tool.setuptools]
# This repository is a flat-layout workspace that contains multiple top-level
# folders (crawler/, trino/, dbt_tiki/, logs/) that are not meant to be
# auto-discovered as installable Python packages.
#
# Declare only the root module to avoid setuptools raising:
# "Multiple top-level packages discovered in a flat-layout".
py-modules = ["main"]
packages = []
